@@ -11,7 +11,7 @@ public class Car implements Function {
     @Override
     public Value<?> apply(List<Value<?>> operands, Environment environment) {
         // single operand - if it's not a ConsCell then error
-        Value<?> operand = operands.get(0);
+        Value<?> operand = operands.getFirst();
         if(operand.getType() != ValueType.CONS_CELL) {
             throw new IllegalArgumentException("Can only invoke car on a list");
         }
